# gilmap

./: .gitignore  Cargo.toml  LICENSE  README.md  conftest.py  pyproject.toml  test_interp.rs
.github/scripts/: smoke.py
.github/workflows/: CI.yml
benchmarks/: __init__.py  harness.py  report.py  run.py  runners.py  suite.py  workloads.py
benchmarks/results/: mac-20260502-p1.json  mac-20260502-p3.json  mac-20260502-p4.json  mac-20260502.json  mac-20260503-p5a.json  mac-20260503-p5b.json  mac-20260503-p5c.json  mac-20260503-p5d.json
docs/: ARCHITECTURE.md  BACKENDS.md  BENCHMARKS.md
gilmap/: __init__.py  _ast_utils.py  _jit.py  _router.py
hyperfunctions/: __init__.py
src/: ast_ir.rs  cfunc_dispatch.rs  jit.rs  lib.rs  per_element.rs  rayon_pool.rs
tests/: tasks.py  test_free_threaded.py  test_heavy.py  test_jit.py  test_numba_bridge.py  test_parallel.py  test_router.py  test_safety.py
