[package]
name = "hyperfunctions"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_hyperfunctions"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "58.1.0", features = ["pyarrow", "ffi"] }
arrow-ipc = "58.1.0"
pyo3 = "0.28.2"
rayon = "1.12.0"
