[package]
name = "gilmap"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_gilmap"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "58.1.0", features = ["pyarrow", "ffi"] }
crossbeam-channel = "0.5.15"
pyo3 = "0.28.2"
