[package]
name = "gilmap"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_gilmap"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "58.1.0", features = ["pyarrow", "ffi"] }
crossbeam-channel = "0.5.15"
pyo3 = "0.28.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cranelift-codegen = "0.124"
cranelift-frontend = "0.124"
cranelift-jit = "0.124"
cranelift-module = "0.124"
target-lexicon = "0.13"
rayon = "1.10"
