[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "gilmap"
description = "Parallel map for CPU-bound numeric Python via Rust workers and per-worker Python sub-interpreters"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Pratik Bhadane" }]
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=14.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dynamic = ["version"]

[project.optional-dependencies]
# Dev-only benchmark suite. Install with: pip install -e ".[bench]"
# Optional comparator deps (joblib, numba, ray, dask) are skipped cleanly
# by the harness if any one fails to install on a given platform.
bench = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "joblib>=1.3",
    "numba>=0.59",
    "ray>=2.9",
    "dask[delayed]>=2024.1",
    "psutil>=5.9",
]

[project.urls]
Homepage = "https://github.com/pratikbhadane/gilmap"
Repository = "https://github.com/pratikbhadane/gilmap"
Issues = "https://github.com/pratikbhadane/gilmap/issues"

[tool.maturin]
# Maturin auto-discovers the `gilmap/` Python package next to pyproject.toml.
# Keep dev-only directories out of the published wheel/sdist.
exclude = [
    { path = "benchmarks/**/*", format = ["wheel", "sdist"] },
    { path = "phases/**/*", format = ["wheel", "sdist"] },
    { path = "tests/**/*", format = ["wheel", "sdist"] },
    { path = "docs/**/*", format = ["wheel", "sdist"] },
]
